--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>ShopIT - Complete Ecommerce Project</title>
+    <title>PhotocardShop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
